# c6xcoffdump

./: .gitignore  CMakeLists.txt  README.md
cmake-modules/: FindGMock.cmake
src/: AbstractVisitable.hpp  BoostMmappedFileObject.cpp  BoostMmappedFileObject.hpp  CoffFile.cpp  CoffFile.hpp  CoffFileHeader.cpp  CoffFileHeader.hpp  CoffSectionHeader.cpp  CoffSectionHeader.hpp  CoffSectionHeaderColl.cpp  CoffSectionHeaderColl.hpp  FileObjectAlgo.hpp  FileObjectFactory.cpp  FileObjectFactory.hpp  ICoffFile.hpp  ICoffFileHeader.hpp  ICoffSectionHeader.hpp  ICoffSectionHeaderColl.hpp  IFileObject.hpp  IVisitable.hpp  TrivialTypeClass.hpp  VisitableTrivialType.hpp  main.cpp
tests/: test_foo.hpp
